--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,11 @@
     font-family: notosansbold;
     src:url(../font/NotoSansCJKkr-Black.otf);
 }
+@font-face { 
+    font-family: 'designhouseOTFLight00'; 
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_three@1.0/designhouseOTFLight00.woff') format('woff'); 
+    font-weight: normal; 
+    font-style: normal; }
 a {
     text-decoration: none;
     color: inherit;
@@ -9,7 +14,7 @@ a {
 
 body {
     width: 100%;
-    perspective: 3000px;
+    perspective: 2000px;
     color: #626262;
     font-family: 'Noto Sans', sans-serif;
 }
@@ -107,54 +112,87 @@ header nav .gnb .gnb_item a.gnb_active {
     left: 300px;
     min-height: 974px; 
     overflow: hidden;
-    transition: .5s;
+/*    transition: .5s;*/
     transform-origin: left;
     transform-style: preserve-3d;
 }
 .spin {
-	transition: .5s;
-    transform-origin: left;
+	transition: 1s;
+/*    transition-delay: .2s;*/
+    transform-origin: center;
     transform-style: preserve-3d;
+    transform: translateZ(-1115.1811646214149791787361565569px);
 }
 .section {
     box-sizing: border-box;
     width: 100%;
     min-height: 974px;
     position: absolute;
-    transform-origin: left;
+    transform-style: preserve-3d;
+    transform-origin: center;
+    backface-visibility: hidden;
+}
+.section:hover {
+    display: block;
 }
 .section01 {
-    transform: rotateY(0deg);
+    transform: rotateY(0deg) translateZ(1115.1811646214149791787361565569px);
     z-index: 5;
 }
 .section02 {
-    transform: rotateY(72deg);
+    transform: rotateY(72deg) translateZ(1115.1811646214149791787361565569px);
     z-index: 4;
-    background: rgba(238, 246, 255, 0.5);
+    background: white;
 }
+.section02::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    max-width: 0;
+    max-height: 0;
+}
+.section02_active::after {
+    content: '';
+    background: linear-gradient(135deg,rgb(255, 194, 111) 10%,#ffffff 30%);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    max-width: 100%;
+    max-height: 100%;
+    z-index: -1;
+    transition: max-width 1s;
+}
+
 .section03 {
-    transform: rotateY(144deg);
+    transform: rotateY(144deg) translateZ(1115.1811646214149791787361565569px);
     z-index: 3;
-    background: rgba(255, 242, 255, 0.1);
+    background: linear-gradient(130deg,rgba(249, 215, 221, 0.15) 50%,rgba(0, 150, 220, 0.15) 100%);
 }
+
 .section04 {
-    transform: rotateY(216deg);
+    transform: rotateY(216deg) translateZ(1115.1811646214149791787361565569px);
     z-index: 2;
-    background: rgba(238, 255, 244, 0.2);
-    overflow: hidden;
+    background: rgba(237, 255, 227, 0.28);
 }
 .section05 {
-    transform: rotateY(288deg);
+    transform: rotateY(288deg) translateZ(1115.1811646214149791787361565569px);
     z-index: 1;
-    background: rgba(227, 215, 215, 0.1);
-    max-width: 0;
+    background: rgba(248, 242, 252, 0.44);
+/*    max-width: 0;*/
     overflow: hidden;
 }
+/*
 .section05_active {
     max-width: 100%;
     overflow: auto;
-    transition: max-width .5s ease .5s;
+    transition: max-width .5s ease;
+    transform-origin: left;
 }
+*/
 
 /*버튼!*/
 .container .next_btn,.prev_btn {
@@ -176,12 +214,6 @@ header nav .gnb .gnb_item a.gnb_active {
     display: none;
 }
 /*섹션!!*/
-.section {
-    box-sizing: border-box;
-    width: 100%;
-    min-height: 974px;
-    position: absolute;
-}
 /*섹션 01----*/
 .section01 {
     background: url(../img/main_bg.jpg) no-repeat center center / cover;
@@ -197,41 +229,52 @@ header nav .gnb .gnb_item a.gnb_active {
 }
 
 .section01 .section01_copy {
-    width: 300px;
-    height: 480px;
+/*    width: 45%;*/
+    height: 250px;
     color: white;
     position: absolute;
     z-index: 5;
-    letter-spacing: -10px;
-    font-family: notosansbold;
-    font-size: 110px;
+/*    font-family: notosansbold;*/
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-evenly;
 }
 .section01 .section01_copy p {
     position: relative;
+    cursor: pointer;
     transform: translateX(110%);
     opacity: 0;
     transition: .7s;
 }
-.section01 .section01_copy p:first-child {
-    transition-delay: .3s;
+.section01 .section01_copy p span {
+    display: inline-block;
+    margin: 0 -7px;
+    transition: .2s;
 }
-.section01 .section01_copy p:nth-child(2) {
-    transition-delay: .7s;
+.section01 .section01_copy p span:hover {
+    transform: translateY(-30px);
+}
+.section01 .section01_copy p:first-child {
+    font-size: 110px;
+    font-family: 'Lobster', cursive;
+    transition-delay: .3s;
+    text-shadow: 2px 2px 3px #aaa;
 }
 .section01 .section01_copy p:last-child {
-    transition-delay: 1s;
+    transition-delay: .6s;
+    font-family: 'designhouseOTFLight00'; 
+    font-size: 30px;
+    text-align: right;
 }
 .section01 .section01_copy p.section01_active {
     transform: translateX(0px);
     opacity: 1;
 }
 
+/*
 .section01 .section01_copy p::after {
     content: attr(data-split);
     position: absolute;
@@ -243,6 +286,7 @@ header nav .gnb .gnb_item a.gnb_active {
     letter-spacing: -10px;
     z-index: -1;
 }
+*/
 
 /*섹션 02*/
 .section02,.section03,.section04 {
@@ -269,8 +313,8 @@ header nav .gnb .gnb_item a.gnb_active {
     color: #51cae7;
     font-family: notosansbold;
     text-align: left;
-    transform: scale(0);
-    transition: transform .5s ease .5s;
+/*    transform: scale(0);*/
+    transition: transform .5s ease;
 }
 .section02_title.section02_active {
     transform: scale(1);
@@ -281,12 +325,14 @@ header nav .gnb .gnb_item a.gnb_active {
     font-size: 60px;
     color: #3267ad;
 }
-
+.section02 .content {
+/*    background: blue;*/
+}
 .section02_main {
     width: 100%;
     margin-top: 60px;
-    transform: scale(0);
-    transition: transform .5s ease .5s;
+/*    transform: scale(0);*/
+    transition: transform .5s ease;
 }
 .section02_main.section02_active {
     transform: scale(1);
@@ -321,8 +367,19 @@ header nav .gnb .gnb_item a.gnb_active {
     float: left;
     text-align: left;
     box-sizing: border-box;
-    padding: 60px 0px 70px 90px;
-    background: linear-gradient(90deg,#d0f1f8 0%,transparent 100%);
+    padding: 20px 0px 70px 20px;
+    position: relative;
+/*    border: 1px solid #3267ad;*/
+/*    background: linear-gradient(90deg,#d0f1f8 20%,transparent 100%);*/
+}
+.section02_main_copy::after {
+    content: '';
+    position: absolute;
+    width: 400px;
+    height: 300px;
+    border: 5px solid #3267ad;
+    top: -45px;
+    left: -20px;
 }
 
 .section02_main_copy h3 {
@@ -332,7 +389,7 @@ header nav .gnb .gnb_item a.gnb_active {
 }
 
 .section02_main_story {
-    height: 130px;
+    height: 100px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -341,9 +398,9 @@ header nav .gnb .gnb_item a.gnb_active {
 
 .section02_sub {
     width: 100%;
-    transform: scale(0);
+/*    transform: scale(0);*/
     transition: .5s;
-    transition-delay: 1s;
+/*    transition-delay: 1s;*/
     display: flex;
     justify-content: space-between;
     text-align: center;
@@ -404,8 +461,8 @@ header nav .gnb .gnb_item a.gnb_active {
     margin-top: 30px;
     width: 100%;
     position: relative;
-    opacity:0;
-    transition: all .6s ease .7s;
+    opacity:1;
+    transition: all .3s ease;
 }
 .section03_main::after {
     content: '';
@@ -475,7 +532,7 @@ header nav .gnb .gnb_item a.gnb_active {
 .section03_sub_item {
     width: 200px;
     height: 230px;
-    background: white;
+/*    background: white;*/
     position: relative;
 }
 
@@ -494,7 +551,7 @@ header nav .gnb .gnb_item a.gnb_active {
 .section03_sub_item::after {
     content: '';
     width: 2px;
-    height: 230px;
+    height: 200px;
     background: #d16277;
     position: absolute;
     top: 0;
@@ -509,7 +566,7 @@ header nav .gnb .gnb_item a.gnb_active {
     height: 2px;
     background:#d16277;
     position: absolute;
-    bottom: -2px;
+    bottom: 28px;
     right: 0;
     max-width: 0px;
     transition:.2s;
@@ -517,10 +574,10 @@ header nav .gnb .gnb_item a.gnb_active {
 .section03_sub_item a::after {
     content: '';
     width: 2px;
-    height: 230px;
+    height: 200px;
     background: #d16277;
     position: absolute;
-    bottom: 0;
+    bottom: 30px;
     right: 0;
     max-height: 0px;
     transition:.2s;
@@ -550,9 +607,17 @@ header nav .gnb .gnb_item a.gnb_active {
 }
 
 .section03_sub_item  p {
-    text-align: center;
-    font-size: #414141;
-    font-weight:normal;
+    text-align: left;
+    width: 70%;
+    color: #ffffff;
+    background: rgba(0, 136, 214, 0.76);
+    padding-left: 10px;
+    border-radius: 0px 20px 20px 0px;
+    font-weight:bold;
+    font-size: 18px;
+    font-family: 'designhouseOTFLight00';
+    height: 30px;
+    line-height: 30px;
     margin-top: 10px;
 }
 
@@ -568,7 +633,10 @@ header nav .gnb .gnb_item a.gnb_active {
     text-indent: -9999px;
 }
 
-
+.section03_body_copy.section03_active {
+    transform: translateX(110%);
+    transition: .5s
+}
 
 .section03_body_copy {
     width: 630px;
@@ -576,15 +644,13 @@ header nav .gnb .gnb_item a.gnb_active {
     margin-top: 110px;
     display: flex;
     flex-wrap: wrap;
-    transition: .5s;
-    opacity:0;
+    transition: .8s;
+    opacity:1;
 }
 .section03_opacity {
     opacity: 1;
 }
-.section03_body_copy.section03_active {
-    transform: translate(110%,0);
-}
+
 .section03_body_copy_item {
     width: 50%;
     height: 50%;
@@ -593,6 +659,7 @@ header nav .gnb .gnb_item a.gnb_active {
 .section03_body_copy_item > h4 {
     color: #d16277;
     font-size: 20px;
+    font-weight: bold;
 }
 .section03_body_copy_item > p {
     color: #717171;
@@ -602,20 +669,22 @@ header nav .gnb .gnb_item a.gnb_active {
 
 
 /*섹션4 ****************************--*/
-.section04::after{
+/*.section04::after{
     content: '';
     width: 100%;
     height: 100%;
     position: absolute;
+    z-index: 5;
     top: 0;
     left: 0;
-    background: linear-gradient(#425d35 50px,transparent 50px) top left repeat / 100% 100px;
-    transition: all .7s ease .5s;
-}
+    background: #425d35;
+    transition: top .7s ease, background .3s;
+}*/
 
 .section04_active::after {
     content: '';
     top: -100%;
+    background: linear-gradient(#425d35 0px, #425d35 50px, transparent 0px, transparent 100px) top repeat / 100% 100px;
 }
 .section04_title {
 	height: 100px;
@@ -625,7 +694,6 @@ header nav .gnb .gnb_item a.gnb_active {
 }
 .section04_head_copy {
 	font-size: 30px;
-/*    font-weight: bold;*/
     font-family: notosansbold;
     color: #414141;
 }
@@ -645,7 +713,8 @@ header nav .gnb .gnb_item a.gnb_active {
     display: flex;
     justify-content: space-between;
     margin-top: 120px;
-    transform: rotateX(30deg);
+    overflow: hidden;
+/*    transform: rotateX(30deg);*/
 }
 
 .section04_left {
@@ -748,7 +817,8 @@ header nav .gnb .gnb_item a.gnb_active {
     padding: 20px 0px;
     font-size: 18px;
     color: #414141;
-    font-family: notosansbold;
+    font-family: 'designhouseOTFLight00'; 
+    font-weight: bold;
     box-shadow: 0px 6px 0px 0px #1f3b11;
     position: relative;
     overflow: hidden;
@@ -864,7 +934,8 @@ footer {
     position: absolute;
     top: 0;
     right: 0;
-    background: rgba(231, 220, 217, 0.8);
+    border-radius: 30%;
+/*    background: white;*/
 }
 .footer {
     height: 500px;
@@ -872,7 +943,12 @@ footer {
     text-align: left;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-evenly;
+    border-top: 2px solid #ddd;
+    border-bottom: 2px solid #ddd;
+    border-left: 2px solid #ddd;
+    background: white;
+    border-radius: 40px 0px 0px 40px;
 }
 .footer_item {
     font-size: 14px;
