--- a/css/style.css
+++ b/css/style.css
@@ -130,6 +130,7 @@ header nav .gnb .gnb_item a.gnb_active {
     transform-style: preserve-3d;
     transform-origin: center;
     backface-visibility: hidden;
+    background: white;
 }
 .section:hover {
     display: block;
@@ -141,7 +142,7 @@ header nav .gnb .gnb_item a.gnb_active {
 .section02 {
     transform: rotateY(72deg) translateZ(1115.1811646214149791787361565569px);
     z-index: 4;
-    background: white;
+/*    background: white;*/
 }
 .section02::after {
     content: '';
@@ -154,7 +155,7 @@ header nav .gnb .gnb_item a.gnb_active {
 }
 .section02_active::after {
     content: '';
-    background: linear-gradient(135deg,rgb(255, 194, 111) 10%,#ffffff 30%);
+/*    background: linear-gradient(135deg,rgb(255, 180, 79) 10%,#ffffff 30%);*/
     position: absolute;
     top: 0;
     left: 0;
@@ -169,18 +170,18 @@ header nav .gnb .gnb_item a.gnb_active {
 .section03 {
     transform: rotateY(144deg) translateZ(1115.1811646214149791787361565569px);
     z-index: 3;
-    background: linear-gradient(130deg,rgba(249, 215, 221, 0.15) 50%,rgba(0, 150, 220, 0.15) 100%);
+/*    background: linear-gradient(130deg,rgba(249, 215, 221, 0.15) 50%,rgba(0, 150, 220, 0.15) 100%);*/
 }
 
 .section04 {
     transform: rotateY(216deg) translateZ(1115.1811646214149791787361565569px);
     z-index: 2;
-    background: rgba(237, 255, 227, 0.28);
+/*    background: rgba(237, 255, 227, 0.28);*/
 }
 .section05 {
     transform: rotateY(288deg) translateZ(1115.1811646214149791787361565569px);
     z-index: 1;
-    background: rgba(248, 242, 252, 0.44);
+/*    background: rgba(248, 242, 252, 0.44);*/
 /*    max-width: 0;*/
     overflow: hidden;
 }
